fix: update project name in CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.16)
-project(CMakeSFMLProject LANGUAGES CXX)
+project(StarPusherSFML LANGUAGES CXX)
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 option(BUILD_SHARED_LIBS "Build shared libraries" OFF)
@@ -11,7 +11,7 @@ FetchContent_Declare(SFML
 FetchContent_MakeAvailable(SFML)
 
 add_executable(
-    main
+    StarPusher
     src/main.cpp
     src/application.h
     src/application.cpp
@@ -50,12 +50,12 @@ add_executable(
     src/utils/resource_holder.h
     src/utils/resource_identifiers.h
 )
-target_link_libraries(main PRIVATE sfml-graphics)
-target_compile_features(main PRIVATE cxx_std_17)
+target_link_libraries(StarPusher PRIVATE sfml-graphics)
+target_compile_features(StarPusher PRIVATE cxx_std_17)
 
 if(WIN32)
     add_custom_command(
-        TARGET main
+        TARGET StarPusher
         COMMENT "Copy OpenAL DLL"
         PRE_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${SFML_SOURCE_DIR}/extlibs/bin/$<IF:$<EQUAL:${CMAKE_SIZEOF_VOID_P},8>,x64,x86>/openal32.dll $<TARGET_FILE_DIR:main>
         VERBATIM)
